--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title></title>
-    <!-- <link rel="canonical" href="https://alexart.s-solo.ru"/> -->
-    <!-- <link rel="icon" type="image/png" href="/icons/512x512.png"/> -->
-    <!-- <link rel="manifest" href="/manifest.json"/> -->
+    <title>Тестовое задание</title>
     <meta charset="UTF-8"/>
     <meta name="msapplication-config" content="/browserconfig.xml"/>
     <meta name="referrer" content="origin"/>
